Attempt at JS license table

--- a/index.html
+++ b/index.html
@@ -58,5 +58,58 @@
                 </ul>
             </nav>
         </div>
+        <!-- LibreJS license table -->
+        <table id="jslicense-labels1">
+            <tr>
+                <td><a href="js/jquery.min.js">jquery.min.js</a></td>
+                <td><a href="https://github.com/eligrey/Blob.js/blob/master/LICENSE.md">Expat</a></td>
+                <td><a href="js/jquery.min.js">jquery.min.js</a></td>
+            </tr>
+            <tr>
+                <td><a href="js/bootstrap.js">bootstrap.js</a></td>
+                <td><a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">Expat</a></td>
+                <td><a href="js/bootstrap.js">bootstrap.js</a></td>
+            </tr>
+            <tr>
+                <td><a href="js/canvas-toBlob.js">canvas-toBlob.js</a></td>
+                <td><a href="https://github.com/eligrey/canvas-toBlob.js/blob/master/LICENSE.md">Expat</a></td>
+                <td><a href="js/canvas-toBlob.js">canvas-toBlob.js</a></td>
+            </tr>
+            <tr>
+                <td><a href="js/FileSaver.js">FileSaver.js</a></td>
+                <td><a href="https://github.com/eligrey/FileSaver.js/blob/master/LICENSE.md">Expat</a></td>
+                <td><a href="js/FileSaver.js">FileSaver.js</a></td>
+            </tr>
+            <tr>
+                <td><a href="js/Course.js">Course.js</a></td>
+                <td><a href="https://github.com/BradleyCai/ucr-schedule-visualizer/blob/gh-pages/LICENSE.md">Expat</a></td>
+                <td><a href="js/Course.js">Course.js</a></td>
+            </tr>
+            <tr>
+                <td><a href="js/UcrBuildings.js">UcrBuildings.js</a></td>
+                <td><a href="https://github.com/BradleyCai/ucr-schedule-visualizer/blob/gh-pages/LICENSE.md">Expat</a></td>
+                <td><a href="js/UcrBuildings.js">UcrBuildings.js</a></td>
+            </tr>
+            <tr>
+                <td><a href="js/CourseParser.js">CourseParser.js</a></td>
+                <td><a href="https://github.com/BradleyCai/ucr-schedule-visualizer/blob/gh-pages/LICENSE.md">Expat</a></td>
+                <td><a href="js/CourseParser.js">CourseParser.js</a></td>
+            </tr>
+            <tr>
+                <td><a href="js/Schedule.js">Schedule.js</a></td>
+                <td><a href="https://github.com/BradleyCai/ucr-schedule-visualizer/blob/gh-pages/LICENSE.md">Expat</a></td>
+                <td><a href="js/Schedule.js">Schedule.js</a></td>
+            </tr>
+            <tr>
+                <td><a href="js/Main.js">Main.js</a></td>
+                <td><a href="https://github.com/BradleyCai/ucr-schedule-visualizer/blob/gh-pages/LICENSE.md">Expat</a></td>
+                <td><a href="js/Main.js">Main.js</a></td>
+            </tr>
+            <tr>
+                <td><a href="js/snowstorm.js">snowstorm.js</a></td>
+                <td><a href="http://schillmania.com/projects/snowstorm/license.txt">FreeBSD</a></td>
+                <td><a href="js/snowstorm.js">snowstorm.js</a></td>
+            </tr>
+        </table>
     </body>
 </html>
