Make outside links open in a new tab

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="https://twitter.com/UCR_Visualizer">Twitter</a></li>
-                    <li><a href="http://www.ucr.edu/">UCR</a></li>
-                    <li><a href="http://campusmap.ucr.edu/imap/index.html">Map</a></li>
-                    <li><a href="https://github.com/BradleyCai/ucr-schedule-visualizer">GitHub</a></li>
+                    <li><a target="_blank" href="https://twitter.com/UCR_Visualizer">Twitter</a></li>
+                    <li><a target="_blank" href="http://www.ucr.edu/">UCR</a></li>
+                    <li><a target="_blank" href="http://campusmap.ucr.edu/imap/index.html">Map</a></li>
+                    <li><a target="_blank" href="https://github.com/BradleyCai/ucr-schedule-visualizer">GitHub</a></li>
                 </ul>
             </nav>
         </div>
