Fixed quarter parsing bugs, added functions in QuarterDates to calculate quarter end dates, and added a year field to Course

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <script type="text/javascript/ucr-schedule-visualizer/" src="js/Blob.js"></script>
         <script type="text/javascript" src="js/canvas-toBlob.js"></script>
+        <script type="text/javascript" src="js/js.cookie-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/FileSaver.js"></script>
         <script type="text/javascript" src="js/Course.js"></script>
         <script type="text/javascript" src="js/UcrBuildings.js"></script>
