Removed caching in QuarterDates, implemented it, and added error handling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <script type="text/javascript/ucr-schedule-visualizer/" src="js/Blob.js"></script>
         <script type="text/javascript" src="js/canvas-toBlob.js"></script>
-        <script type="text/javascript" src="js/js.cookie-2.1.1.min.js"></script>
+        <script type="text/javascript" src="js/js-cookie.min.js"></script>
+        <script type="text/javascript" src="js/QuarterDates.js"></script>
         <script type="text/javascript" src="js/FileSaver.js"></script>
         <script type="text/javascript" src="js/Course.js"></script>
         <script type="text/javascript" src="js/UcrBuildings.js"></script>
