Reverted the cookie checking and instead chose to have the cookie expire in 10 years. Changed some wording

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             <section>
                 <a name="privacy"></a>
                 <h1>Privacy Policy</h1>
-                <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. At all. We have no interest in selling your personal data to advertisers. You can even try disconnecting your internet and entering your data. If you're still skeptical, you can see all the source code on our <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/">GitHub</a>. We do however store your GROWL schedule in a cookie that either expires at the end of the quarter or when you click the button "Visualize Again".
+                <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. At all. We have no interest in selling your personal data to advertisers. You can even try disconnecting your internet and entering your data. If you're still skeptical, you can see all the source code on our <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/">GitHub</a>. We do however store your GROWL schedule in a cookie that either expires after 10 years or when you click the button "Visualize Again".
 
                 <br><br>We also collect statistics about who visits our page. The <a href="https://waa.ai/">Akari Link Shortener</a> records the clicks for our <a href= "https://waa.ai/ucrsv">shortened link</a>. The click count can be found <a href="https://stats.waa.ai/ucrsv">here</a>. Also, GitHub collects statistics about our general traffic and that can be found <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/graphs/traffic">here</a>.
 
