--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 
         <div class="container">
             <p class="alert alert-info">
-                <strong>Something isn't working!</strong> Yeah, UCRSV is still early in development. <a href="about.html">Email us</a> or <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/issues/new">submit an issue</a> about what went wrong!<br><br> UCRSV is tested on Windows and GNU/Linux using Chrome and Firefox. If you're using a different browser or OS you might run into some issues until we fix them.
+                <strong>Something isn't working!</strong> Yeah, UCRSV is still early in development. <a href="about.html">Email us</a> or <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/issues/new">submit an issue</a> about what went wrong!<br><br> 
+                
+                UCRSV is tested on Windows and GNU/Linux using Chrome and Firefox. If you're using a different browser or OS you might run into some issues until we fix them. <br><br>
+                
+                <strong>We changed our <a href="about.html#privacy">privacy policy</a>.</strong> UCRSV now uses tasty cookies to make your life easier!
             </p>
 
             <nav>
