Made naming scheme more uniform, removed twitter link, added new chrome header, and added new background

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="theme-color" content="#3a3a3a">
         <title>UCR Schedule Visualizer</title>
-        <link rel="shortcut icon" href="img/ucr-icon.png" type="image/png">
+        <link rel="shortcut icon" href="img/ucrsv-icon.png" type="image/png">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/bs-popover.css">
@@ -55,7 +56,6 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a target="_blank" href="https://twitter.com/UCR_Visualizer">Twitter</a></li>
                     <li><a target="_blank" href="http://www.ucr.edu/">UCR</a></li>
                     <li><a target="_blank" href="http://campusmap.ucr.edu/imap/index.html">Map</a></li>
                     <li><a target="_blank" href="https://github.com/BradleyCai/ucr-schedule-visualizer">GitHub</a></li>
