--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
 
         <div class="container">
             <p class="alert alert-info">
-                <strong>Something isn't working!</strong> Yeah, UCRSV is still early in development. <a href="about.html">Email us</a> or <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/issues/new">submit an issue</a> about what went wrong!<br><br> 
-                
-                UCRSV is tested on Windows and GNU/Linux using Chrome and Firefox. If you're using a different browser or OS you might run into some issues until we fix them. <br><br>
-                
-                <strong>We changed our <a href="about.html#privacy">privacy policy</a>.</strong> UCRSV now uses tasty cookies to make your life easier!
+                <strong>We are not developing UCRSV any more</strong> With UCR's recent switch to Banner, we've decided to stop working on UCRSV. We plan to add minimal compatibility for it's schedule, but that'll be the last thing we do for this website. You can check the <a href="about.html#end">about</a> page for more information.<br>
             </p>
 
             <nav>
