--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="container">
             <p class="alert alert-info">
-                <strong>We are not developing UCRSV any more</strong> With UCR's recent switch to Banner, we've decided to stop working on UCRSV. We plan to add minimal compatibility for it's schedule, but that'll be the last thing we do for this website. You can check the <a href="about.html#end">about</a> page for more information.<br>
+                <strong>We are not developing UCRSV any more</strong> With UCR's recent switch to Banner, we've decided to stop working on UCRSV. We plan to add minimal compatibility for its schedule, but that'll be the last thing we do for this website. You can check the <a href="about.html#end">about</a> page for more information.<br>
             </p>
 
             <nav>
